--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,14 +27,35 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
   http: ^0.13.4
+  shared_preferences: ^2.0.11
+  flutter_secure_storage : ^5.0.2
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.0.2
+  flutter_rating_bar: ^4.0.1
+  dio: ^5.3.3
+  permission_handler: ^8.3.0
+#  camera: ^0.9.8+1
+#  tflite_flutter: ^0.9.1
+#  tflite_flutter_helper: ^0.3.1
+#  image: ^3.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+#  kakao_flutter_sdk_common: ^1.6.1
+#  kakao_flutter_sdk: ^1.6.1 # 전체 추가
+  kakao_flutter_sdk_user: ^1.1.1 # 카카오 로그인
+  provider: ^6.0.5
+  image_picker: ^1.0.4
+#  kakao_flutter_sdk_talk: ^1.6.1 # 카카오톡 메시지, 카카오톡 소셜(프로필 가져오기, 친구 목록 가져오기)
+#  kakao_flutter_sdk_story: ^1.6.1 # 카카오스토리
+#  kakao_flutter_sdk_share: ^1.6.1 # 카카오톡 공유
+#  kakao_flutter_sdk_navi: ^1.6.1 # 카카오내비
+#  kakao_flutter_sdk_friend: ^1.6.1 # 카카오톡 소셜(피커: 친구 선택하기)
 
 dev_dependencies:
   flutter_test:
@@ -47,7 +68,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
   flutter_svg: ^2.0.7
-  flutter_native_splash: ^2.3.3
+  flutter_native_splash: ^2.2.16
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -68,8 +89,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  fonts:
+    - family: NanumMyeongjo-ExtraBold
+      fonts:
+        - asset: assets/fonts/NanumMyeongjo-ExtraBold.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
