--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,8 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   dio: ^5.3.3
   permission_handler: ^8.3.0
-#  camera: ^0.9.8+1
-#  tflite_flutter: ^0.9.1
-#  tflite_flutter_helper: ^0.3.1
-#  image: ^3.3.0
+  tflite_v2: ^1.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -89,6 +87,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/model/model_unquant.tflite
+    - assets/model/labels.txt
     - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
